manifests/app/istio/virtualservice-internal.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend-internal
  namespace: online-boutique
spec:
  hosts:
    - "frontend.online-boutique.svc.cluster.local"
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 80
